[package]
name = "cryprice"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
ethers = "2.0.14"
futures = "0.3.31"
hyperliquid_rust_sdk = "0.5.0"
iter_tools = "0.29.0"
nestruct = "0.1.0"
pretty-table = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thin-logger = "0.1.2"
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
